# VirtualTryOn

./: .gitignore  README.md  start_backend.sh
backend/: .env  .gitignore  api.py  banana.py  pyproject.toml
frontend/my-app/: package-lock.json  package.json  pnpm-lock.yaml
frontend/my-app/app/: page.tsx
frontend/my-app/components/: ProductCard.tsx
